# ur_setup_ws

./: CMakeLists.txt  README.md  command.txt  package.xml
config/: initial_positions.yaml  kinematics.yaml  ur16e_robotiq_2f85_controllers.yaml  ur5e_robotiq_2f85_controllers.yaml
config/ur5e/: default_kinematics.yaml  joint_limits.yaml  physical_parameters.yaml  visual_parameters.yaml
launch/: ur_sim_moveit_robotiq.launch.py  ur_sim_moveit_robotiq_ur16e.launch.py
meshes/bracket/: ur_D435i_BRACKET.STL
models/pick_block/: model.sdf
rviz/: robot_model.rviz
srdf/: ur_robotiq.srdf.xacro
urdf/: camera_bracket_adapter.urdf.xacro  testbed.urdf.xacro  ur16e_robotiq_2f85.urdf.xacro  ur5e_robotiq_2f85.urdf.xacro  ur_to_robotiq_adapter.urdf.xacro
worlds/: testbed.sdf
